fixed spacing issues, added titles to the our projects section that lay over the svg files

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,11 +244,7 @@ h5 {
   color: white;
 }
 
-.col-6 {
-  position: relative;
-  text-align: center;
-  color: white;
-}
+
 
 .colored {
   position: absolute;
